<resources>
    <string name="app_name">Parstagram</string>
    <string name="username_placeholder">Phone number, email or username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="singup">Signup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="camera">Camera</string>
    <string name="home">home</string>
    <string name="addpost">addPost</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log Out</string>
    <string name="compose">Compose</string>
    <string name="post_caption">Post Caption</string>
    <string name="post">Post</string>
    <string name="profile">Profile</string>
    <string name="app_logo">App Logo</string>
    <string name="logo">logo</string>
    <string name="time_placeholder">2 hours ago</string>
    <string name="view_all_comments">View all comments</string>
    <string name="num_likes_placeholder">10</string>
    <string name="likes">likes</string>
    <string name="update_profile">Update Profile</string>
    <string name="new_profile">New Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="posts">Posts</string>
</resources>