<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <ImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:src="@drawable/nav_logo_whiteout" />
        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/username_placeholder"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/password"
            android:padding="12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/confirmSignupPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/confirm_password"
            android:padding="12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <!-- material button is used to display the "Login" button to user-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="#3897f0"
            android:padding="12dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />
    </LinearLayout>

</RelativeLayout>
