<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="28dp"
        android:paddingEnd="28dp">

        <ImageView
            android:layout_width="147dp"
            android:layout_height="82dp"
            android:src="@drawable/nav_logo_whiteout" />

        <!-- Edit text provided to user to
            enter email, username or phone no.-->
        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/username_placeholder"
            android:padding="12dp"
            android:singleLine="true"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/background_edit_text"
            android:hint="@string/password"
            android:padding="12dp"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textSize="14sp" />

        <!-- material button is used to display the "Login" button to user-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="#3897f0"
            android:padding="12dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:cornerRadius="4dp" />


        <!-- Linear layout to display the message-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="12sp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="#9a9a9a"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="1.5dp"
                android:layout_weight="1"
                android:background="#e2e2e2" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/singup"
            android:textColor="#3897f0"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
