<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="0dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvUsername"
            android:textStyle="bold"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="rahul" />
    </LinearLayout>

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingEnd="5dp"
        android:paddingTop="8dp"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/likeButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/like_button_selector"
            android:checked="false"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:text=""
            android:textOff=""
            android:textOn=""/>

        <ImageButton
            android:id="@+id/commentButton"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ufi_comment"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        >
        <TextView
            android:id="@+id/postNumLikes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/num_likes_placeholder"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/likes"
            android:textStyle="bold"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingLeft="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/captionUsername"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username_placeholder"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:text="rahul"
            tools:ignore="DuplicateIds" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:text="trying to look hipster" />
    </LinearLayout>
    <TextView
        android:id="@+id/viewPostComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="14sp"
        android:text="@string/view_all_comments"/>
    <TextView
        android:id="@+id/created_at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textSize="10sp"
        android:text="@string/time_placeholder"/>
</LinearLayout>