<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/userProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="0dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logoutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:padding="12dp"
                android:text="@string/log_out"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_weight="0.5"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/uploadProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:visibility="gone"
                android:padding="12dp"
                android:text="@string/update_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_weight="0.3"
                app:cornerRadius="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addNewProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/white"
                android:visibility="visible"
                android:padding="12dp"
                android:text="@string/new_profile"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:layout_weight="0.3"
                app:cornerRadius="4dp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfilePosts"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</RelativeLayout>